--- a/repository/api/pom.xml
+++ b/repository/api/pom.xml
@@ -10,6 +10,10 @@
   <packaging>jar</packaging>
   <dependencies>
     <dependency>
+      <groupId>ar.com.zauber.commons.persistence</groupId>
+      <artifactId>commons-persistence-api</artifactId>
+    </dependency>
+    <dependency>
       <groupId>ar.com.zauber.commons</groupId>
       <artifactId>commons-dao</artifactId>
     </dependency>
