--- a/repository/impl/spring-hbm/pom.xml
+++ b/repository/impl/spring-hbm/pom.xml
@@ -10,13 +10,11 @@
   <groupId>ar.com.zauber.commons.repository.impl</groupId>
   <dependencies>
     <!-- BEGIN: Zauber Commons -->
-    <dependency>
-      <artifactId>commons-auth-api</artifactId>
-      <groupId>ar.com.zauber.commons.auth</groupId>
-      <scope>compile</scope>
-    </dependency>
-    <!-- BEGIN: Zauber Commons -->
     <!-- BEGIN: Apache Commons -->
+    <dependency>
+      <groupId>ar.com.zauber.commons.persistence</groupId>
+      <artifactId>commons-persistence-utils</artifactId>
+    </dependency>
     <dependency>
       <groupId>commons-beanutils</groupId>
       <artifactId>commons-beanutils</artifactId>
@@ -25,53 +23,36 @@
       <groupId>commons-collections</groupId>
       <artifactId>commons-collections</artifactId>
     </dependency>       
+    <!-- BEGIN: Testing -->
     <dependency>
       <groupId>commons-dbcp</groupId>
       <artifactId>commons-dbcp</artifactId>
+      <scope>test</scope>
     </dependency>         
-    <!-- BEGIN: Apache Commons -->
-    <!-- BEGIN: Spring Framework -->
     <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-orm</artifactId>
-    </dependency>    
+      <groupId>hsqldb</groupId>
+      <artifactId>hsqldb</artifactId>
+      <scope>test</scope>
+    </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-test</artifactId>
-    </dependency>
-    <!-- END: Spring Framework -->
-    <!-- BEGIN: Hibernate -->
-    <dependency>
-      <groupId>org.hibernate</groupId>
-      <artifactId>hibernate-core</artifactId>
+      <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.hibernate</groupId>
-      <artifactId>hibernate-annotations</artifactId>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+      <scope>test</scope>
     </dependency>
-    <!-- END: Hibernate -->
+   <!-- END: Testing -->         
+    <!-- BEGIN: Apache Commons -->
+
     <!-- BEGIN: Logging -->
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
     </dependency>
-    <!-- In order to commons-logging usage is bypassed to slf4j -->
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>jcl-over-slf4j</artifactId>
-    </dependency>
     <!-- END: Logging -->
-    <!-- BEGIN: JDBC Drivers -->
-    <dependency>
-      <groupId>hsqldb</groupId>
-      <artifactId>hsqldb</artifactId>
-    </dependency>
-    <!-- END: JDBC Drivers -->
-    <dependency>
-      <groupId>javassist</groupId>
-      <artifactId>javassist</artifactId>
-      <version>3.4.GA</version>
-    </dependency>
   </dependencies>
   <build>
     <plugins>
