--- a/web/utils/pom.xml
+++ b/web/utils/pom.xml
@@ -10,17 +10,17 @@
 
   <dependencies>
      <dependency>
-        <artifactId>commons-lang</artifactId>
-        <groupId>commons-lang</groupId>
-     </dependency>
-     <dependency>
         <groupId>javax.servlet</groupId>
        <artifactId>servlet-api</artifactId>
        <scope>provided</scope>
      </dependency>
+    <dependency>
+       <artifactId>commons-persistence-api</artifactId>
+       <groupId>ar.com.zauber.commons.persistence</groupId>
+     </dependency>
      <dependency>
-       <artifactId>commons-repository-api</artifactId>
-       <groupId>ar.com.zauber.commons.repository</groupId>
+       <artifactId>commons-dao</artifactId>
+       <groupId>ar.com.zauber.commons</groupId>
      </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
