--- a/persistence/utils/pom.xml
+++ b/persistence/utils/pom.xml
@@ -32,17 +32,11 @@
     <!-- BEGIN: Hibernate -->
     <dependency>
       <groupId>org.hibernate</groupId>
-      <artifactId>hibernate-core</artifactId>
+      <artifactId>hibernate-entitymanager</artifactId>
     </dependency>
     <dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-annotations</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>javassist</groupId>
-      <artifactId>javassist</artifactId>
-      <version>3.4.GA</version>
-      <scope>runtime</scope>
     </dependency>
     <!-- END: Hibernate -->
     <!-- BEGIN: Logging -->
