--- a/pom.xml
+++ b/pom.xml
@@ -488,6 +488,11 @@
       </dependency>
       <dependency>
         <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-entitymanager</artifactId>
+        <version>${hibernate.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.hibernate</groupId>
         <artifactId>hibernate-annotations</artifactId>
         <version>${hibernate.version}</version>
       </dependency>
