Assets no requiere beans definidos por defecto. Si no encuentra AssetRepository o UriFactory en el contexto de spring crea uno simple, y relativo para poder trabajar (y realiza una advertencia).

--- a/web/uri/pom.xml
+++ b/web/uri/pom.xml
@@ -38,7 +38,14 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-test</artifactId>
+      <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <scope>test</scope>
+    </dependency>
+
     <!-- END: Spring Framework -->
     <!-- BEGIN: Logging -->
     <!-- In order to commons-logging usage is bypassed to slf4j -->
