--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -29,10 +29,11 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>ar.com.zauber.commons.repository.impl</groupId>
-      <artifactId>commons-repository-impl-springhbm</artifactId>
+      <groupId>ar.com.zauber.commons.persistence</groupId>
+      <artifactId>commons-persistence-utils</artifactId>
       <optional>true</optional>
     </dependency>
+
     <dependency>
       <groupId>ar.com.zauber.commons.repository.impl</groupId>
       <artifactId>commons-repository-impl-entities</artifactId>
