--- a/spring-taglib/pom.xml
+++ b/spring-taglib/pom.xml
@@ -38,6 +38,39 @@
       <artifactId>jcl-over-slf4j</artifactId>
     </dependency>
     <!-- END: Logging -->
-
+     <dependency>
+        <groupId>trang</groupId>
+        <artifactId>trang</artifactId>
+        <version>20081028</version>
+       <scope>provided</scope>
+     </dependency>
   </dependencies>
+     <build>
+        <plugins>
+           <plugin>
+                 <groupId>org.codehaus.mojo</groupId>
+                 <artifactId>exec-maven-plugin</artifactId>
+                 <version>1.1</version>
+                 <executions>
+                         <execution>
+                                 <goals>
+                                         <goal>java</goal>
+                                 </goals>
+                         </execution>
+                 </executions>
+                 <configuration>
+                         <mainClass>com.thaiopensource.relaxng.translate.Driver</mainClass>
+                         <arguments>
+                                 <argument>-I</argument>
+                                 <argument>rnc</argument>
+                                 <argument>-O</argument>
+                                 <argument>xsd</argument>
+                                 <argument>src/main/resources/ar/com/zauber/spring/taglib/spring.rnc</argument>
+                                 <argument>src/main/resources/ar/com/zauber/spring/taglib/spring.xsd</argument>
+                         </arguments>
+                 </configuration>
+         </plugin>
+            </plugins>
+    </build>
+
 </project>
