--- a/converter/spring/pom.xml
+++ b/converter/spring/pom.xml
@@ -26,5 +26,40 @@
        <groupId>org.springframework</groupId>
        <artifactId>spring-context</artifactId>
      </dependency>
+     <dependency>
+        <groupId>trang</groupId>
+        <artifactId>trang</artifactId>
+        <version>20081028</version>
+       <scope>provided</scope>
+     </dependency>
   </dependencies>
+     <build>
+        <plugins>
+           <plugin>
+                 <groupId>org.codehaus.mojo</groupId>
+                 <artifactId>exec-maven-plugin</artifactId>
+                 <version>1.1</version>
+                 <executions>
+                         <execution>
+                                 <goals>
+                                         <goal>java</goal>
+                                 </goals>
+                         </execution>
+                 </executions>
+                 <configuration>
+                         <mainClass>com.thaiopensource.relaxng.translate.Driver</mainClass>
+                         <arguments>
+                                 <argument>-I</argument>
+                                 <argument>rnc</argument>
+                                 <argument>-O</argument>
+                                 <argument>xsd</argument>
+                                 <argument>src/main/resources/ar/com/zauber/commons/conversion/spring/schema/converter.rnc</argument>
+                                 <argument>src/main/resources/ar/com/zauber/commons/conversion/spring/schema/converter.xsd</argument>
+                         </arguments>
+                 </configuration>
+         </plugin>
+            </plugins>
+    </build>
+
+
 </project>
