--- a/converter/core/pom.xml
+++ b/converter/core/pom.xml
@@ -22,6 +22,10 @@
        <groupId>org.springframework</groupId>
        <artifactId>spring-beans</artifactId>
     </dependency>
+    <dependency>
+       <groupId>org.springframework</groupId>
+       <artifactId>spring-expression</artifactId>
+    </dependency>
     <!-- BEGIN: Logging -->
     <!-- In order to commons-logging usage is bypassed to slf4j -->
     <dependency>
