--- a/pom.xml
+++ b/pom.xml
@@ -131,7 +131,17 @@
           </execution>
         </executions>
       </plugin>
-
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <encoding>ISO-8859-1</encoding>
+          <source>1.6</source>
+          <target>1.6</target>
+        </configuration>
+        <inherited>true</inherited>
+      </plugin>
+ 
       <plugin>
         <artifactId>maven-release-plugin</artifactId>
         <configuration>
