--- a/persistence/utils/pom.xml
+++ b/persistence/utils/pom.xml
@@ -66,7 +66,11 @@
       <artifactId>spring-test</artifactId>
       <scope>test</scope>
     </dependency>
-    
+    <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-core</artifactId>
+        <scope>test</scope>
+    </dependency>    
    <!-- END: Testing -->
   </dependencies>
 </project>
