--- a/social/oauth/twitter/pom.xml
+++ b/social/oauth/twitter/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>ar.com.zauber.commons.social.oauth</groupId>
     <artifactId>parent</artifactId>
-    <version>3.36-SNAPSHOT</version>
+    <version>3.36</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
