--- a/social/oauth/twitter/pom.xml
+++ b/social/oauth/twitter/pom.xml
@@ -52,15 +52,26 @@
     </dependency>
     <!-- END: J2EE Servlet -->
     <!-- BEGIN: Logging -->
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-    </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+	    <version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jcl-over-slf4j</artifactId>
+	    <version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+	    <version>${slf4j.version}</version>
+        </dependency>    
     <!-- END: Logging -->
     <dependency>
-      <groupId>net.homeip.yusuke</groupId>
-      <artifactId>twitter4j</artifactId>
-      <version>2.0.10</version>
+        <groupId>org.twitter4j</groupId>
+        <artifactId>twitter4j-core</artifactId>
+        <version>2.1.4</version>
     </dependency>
   </dependencies>
 
