--- a/social/oauth/examples/pom.xml
+++ b/social/oauth/examples/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>ar.com.zauber.commons.social.oauth</groupId>
     <artifactId>parent</artifactId>
-    <version>3.37</version>
+    <version>3.38-SNAPSHOT</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
@@ -28,8 +28,8 @@
     <dependencies>
 
         <dependency>
-            <groupId>ar.com.zauber.commons.social.oauth</groupId>
-            <artifactId>commons-social-oauth-twitter</artifactId>
+            <groupId>ar.com.zauber.commons.social.twitter</groupId>
+            <artifactId>commons-social-twitter</artifactId>
             <version>${pom.version}</version>
         </dependency>
         
