--- a/pom.xml
+++ b/pom.xml
@@ -9,13 +9,13 @@
   <name>Zauber::Commons</name>
   <groupId>ar.com.zauber.commons</groupId>
   <artifactId>zauber-commons-parent</artifactId>
-  <version>3.38-SNAPSHOT</version>
+  <version>3.38</version>
   <packaging>pom</packaging>
 
   <scm>
-    <connection>scm:svn:https://code.zaubersoftware.com/repos/sandbox/components/commons/code/trunk/</connection>
-    <developerConnection>scm:svn:https://code.zaubersoftware.com/repos/sandbox/components/commons/code/trunk/</developerConnection>
-    <url>https://code.zaubersoftware.com/repos/sandbox/components/commons/code/trunk/</url>
+    <connection>scm:svn:https://code.zaubersoftware.com/repos/sandbox/components/commons/code/releases/3.38/</connection>
+    <developerConnection>scm:svn:https://code.zaubersoftware.com/repos/sandbox/components/commons/code/releases/3.38/</developerConnection>
+    <url>https://code.zaubersoftware.com/repos/sandbox/components/commons/code/releases/3.38/</url>
   </scm>
 
   <licenses>
