--- a/documentation/pom.xml
+++ b/documentation/pom.xml
@@ -4,7 +4,7 @@
   <parent>
      <groupId>ar.com.zauber.commons</groupId>
      <artifactId>zauber-commons-parent</artifactId>
-     <version>3.38-SNAPSHOT</version>
+     <version>3.38</version>
   </parent>
   <groupId>ar.com.zauber.commons.documentation</groupId>
   <artifactId>documentation-parent</artifactId>
