--- a/image/api/pom.xml
+++ b/image/api/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>parent</artifactId>
     <groupId>ar.com.zauber.commons.image</groupId>
-    <version>3.42-SNAPSHOT</version>
+    <version>3.42</version>
   </parent>
   <name>Zauber::Commons::Image::API</name>
   <artifactId>commons-image-api</artifactId>
