--- a/social/twitter/pom.xml
+++ b/social/twitter/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>parent</artifactId>
     <groupId>ar.com.zauber.commons.social</groupId>
-    <version>3.42-SNAPSHOT</version>
+    <version>3.42</version>
   </parent>
   <name>Zauber::Commons::Social::Twitter</name>
   <artifactId>commons-social-twitter</artifactId>
