--- a/converter/spring/pom.xml
+++ b/converter/spring/pom.xml
@@ -11,8 +11,8 @@
   <dependencies>
     <dependency>
       <artifactId>commons-conversion-core</artifactId>
-      <groupId>${pom.groupId}</groupId>
-      <version>${pom.version}</version>
+      <groupId>${project.groupId}</groupId>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
        <groupId>org.springframework</groupId>
