Update license plugin

--- a/pom.xml
+++ b/pom.xml
@@ -44,16 +44,6 @@
     </repository>
   </repositories>
 
-  <pluginRepositories>
-    <pluginRepository>
-      <id>mc-release</id>
-      <name>Local Maven repository of releases</name>
-      <url>http://mc-repo.googlecode.com/svn/maven2/releases</url>
-      <snapshots><enabled>false</enabled></snapshots>
-      <releases><enabled>true</enabled></releases>
-    </pluginRepository>
-  </pluginRepositories>
-
   <distributionManagement>
     <repository>
       <id>zauber-code-releases</id>
@@ -72,16 +62,6 @@
     </site>
 
   </distributionManagement>
-
-  <!-- pluginRepositories>
-  <pluginRepository>
-    <id>mc-release</id>
-    <name>mc repository of releases</name>
-    <url>http://mc-repo.googlecode.com/svn/maven2/releases</url>
-    <snapshots> <enabled>false</enabled> </snapshots>
-    <releases> <enabled>true</enabled> </releases>
-  </pluginRepository>
-  </pluginRepositories -->
 
   <modules>
     <module>base</module>
@@ -154,61 +134,31 @@
           <autoVersionSubmodules>true</autoVersionSubmodules>
         </configuration>
       </plugin>
-      <!-- mantiene a raya los headers de las licencias -->
-      <plugin>
-        <groupId>com.google.code.maven-license-plugin</groupId>
-        <artifactId>maven-license-plugin</artifactId>
-        <version>1.4.0</version>
-        <inherited>false</inherited>
-        <configuration>
-          <quiet>false</quiet>
-          <header>src/HEADER.txt</header>
-          <failIfMissing>true</failIfMissing>
-          <aggregate>false</aggregate>
-          <includes>
-            <include>**/src/**</include>
-            <include>**/test/**</include>
-          </includes>
-          <excludes>
-            <exclude>documentation/**</exclude>
-            <exclude>**/*.xsd</exclude>
-            <exclude>**/spring.schemas</exclude>
-            <exclude>**/spring.handlers</exclude>
-            <exclude>**/passwd/UnixCrypt.java</exclude>
-            <exclude>**/words.spanish.latin1</exclude>
-            <exclude>**/doxia/**</exclude>
-            <exclude>**/target/**</exclude>
-            <exclude>**/.clover/**</exclude>
-            <exclude>**/README.txt</exclude>
-            <exclude>**/.keep</exclude>
-            <exclude>**/*.xml</exclude>
-            <exclude>**/*.properties</exclude>
-            <exclude>**/libmisc/**</exclude>
-            <exclude>auth/password/src/main/c/**</exclude>
-            <exclude>**/*.c</exclude>
-            <exclude>**/*.h</exclude>
-            <exclude>**/Makefile*</exclude>
-            <exclude>src/docbkx/**</exclude>
-            <exclude>src/site/**</exclude>
-            <exclude>*.css</exclude>
-            <exclude>*.svg</exclude>
-          </excludes>
-          <useDefaultExcludes>true</useDefaultExcludes>
-          <useDefaultMapping>true</useDefaultMapping>
-          <properties>
-            <email>http://www.zaubersoftware.com/</email>
-          </properties>
-          <encoding>iso-8859-1</encoding>
-        </configuration>
-        <executions>
-          <execution>
-            <phase>test</phase>
-            <goals>
-              <goal>check</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
+	<plugin>
+            <groupId>com.mycila.maven-license-plugin</groupId>
+            <artifactId>maven-license-plugin</artifactId>
+	    <version>1.9.0</version>
+            <configuration>
+                <header>src/HEADER.txt</header>
+                <includes>
+	    	<include>**/*.java</include>
+	        </includes>
+                <excludes>
+                    <exclude>target/**</exclude>
+                    <exclude>.gitignore</exclude>
+                    <exclude>**/*.txt</exclude>
+                </excludes>
+                <encoding>iso-8859-1</encoding>
+                <strictCheck>true</strictCheck>
+            </configuration>
+            <executions>
+                <execution>
+                    <goals>
+                        <goal>check</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
       <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-site-plugin</artifactId>
