--- a/message/impl/pom.xml
+++ b/message/impl/pom.xml
@@ -63,5 +63,12 @@
       <artifactId>jcl-over-slf4j</artifactId>
     </dependency>
     <!-- END: Logging -->
+    <!-- BEGIN: Test -->
+    <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-all</artifactId>
+        <scope>test</scope>
+    </dependency>
+    <!-- END: Test --> 
   </dependencies>
 </project>
