--- a/pom.xml
+++ b/pom.xml
@@ -757,6 +757,12 @@
         <version>1.8.5</version>
         <scope>test</scope>
       </dependency>
+      <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-all</artifactId>
+        <version>1.8.5</version>
+        <scope>test</scope>
+      </dependency>
       <!-- END: Testing -->
       <dependency>
         <artifactId>jtidy</artifactId>
