Production implementation of the {@link JavaMailSender} interface based on {@link JavaMailSenderImpl} adapted to work on Google App Engine.

--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -98,5 +98,17 @@
       <artifactId>stax</artifactId>
       <version>1.2.0</version>
     </dependency>
+    
+    <!-- BEGIN: GAE Java Mail Sender -->
+    <dependency>
+      <groupId>javax.mail</groupId>
+      <artifactId>mail</artifactId>
+      <version>1.4</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context-support</artifactId>
+    </dependency>
+    <!-- END: GAE Java Mail Sender -->
   </dependencies>
 </project>
