--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,9 @@
   <packaging>pom</packaging>
 
   <scm>
-    <connection>scm:svn:https://code.zaubersoftware.com/repos/sandbox/components/commons/code/trunk/</connection>
-    <developerConnection>scm:svn:https://code.zaubersoftware.com/repos/sandbox/components/commons/code/trunk/</developerConnection>
-    <url>https://code.zaubersoftware.com/repos/sandbox/components/commons/code/trunk/</url>
+    <connection>scm:git:git@github.com:jcodagnone/commons.git</connection>
+    <url>scm:git:git@github.com:zaubersoftware/commons.git</url>
+    <developerConnection>scm:git:git@github.com:zaubersoftware/common.git</developerConnection>
   </scm>
 
   <licenses>
