--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
   <scm>
     <connection>scm:git:git@github.com:jcodagnone/commons.git</connection>
     <url>scm:git:git@github.com:zaubersoftware/commons.git</url>
-    <developerConnection>scm:git:git@github.com:zaubersoftware/common.git</developerConnection>
+    <developerConnection>scm:git:git@github.com:zaubersoftware/commons.git</developerConnection>
   </scm>
 
   <licenses>
@@ -128,6 +128,10 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
+        <configuration>
+                <autoVersionSubmodules>true</autoVersionSubmodules>
+        </configuration>
+
         <version>2.1</version>
       </plugin>
 	<plugin>
