--- a/wicket/impl/pom.xml
+++ b/wicket/impl/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <artifactId>parent</artifactId>
     <groupId>ar.com.zauber.commons.wicket</groupId>
-    <version>3.45-SNAPSHOT</version>
+    <version>3.45</version>
   </parent>
   <name>Zauber::Commons::Wicket::Implementation</name>
   <modelVersion>4.0.0</modelVersion>
