--- a/exception/pom.xml
+++ b/exception/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <artifactId>zauber-commons-parent</artifactId>
     <groupId>ar.com.zauber.commons</groupId>
-    <version>3.45</version>
+    <version>3.46-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>ar.com.zauber.commons</groupId>
