--- a/fts/pom.xml
+++ b/fts/pom.xml
@@ -3,7 +3,7 @@
   <parent>
      <artifactId>zauber-commons-parent</artifactId>
      <groupId>ar.com.zauber.commons</groupId>
-     <version>3.45</version>
+     <version>3.46-SNAPSHOT</version>
   </parent>
   <name>Zauber::Commons::Full Text Search</name>
   <groupId>ar.com.zauber.commons.fts</groupId>
