--- a/persistence/api/pom.xml
+++ b/persistence/api/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>commons-persistence-parent</artifactId>
     <groupId>ar.com.zauber.commons.persistence</groupId>
-    <version>3.45</version>
+    <version>3.46-SNAPSHOT</version>
   </parent>
   <name>Zauber::Commons::Persistence::API</name>
   <artifactId>commons-persistence-api</artifactId>
