mvn release don't have any good reason to push automaticaly the changes

--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,7 @@
         <artifactId>maven-release-plugin</artifactId>
         <configuration>
                 <autoVersionSubmodules>true</autoVersionSubmodules>
+                <pushChanges>false</pushChanges>
         </configuration>
 
         <version>2.1</version>
