--- a/repository/api/pom.xml
+++ b/repository/api/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>repository-parent</artifactId>
     <groupId>ar.com.zauber.commons.repository</groupId>
-    <version>3.46</version>
+    <version>3.47-SNAPSHOT</version>
   </parent>
   <name>Zauber::Commons::Repository::API</name>
   <artifactId>commons-repository-api</artifactId>
