--- a/xmpp/pom.xml
+++ b/xmpp/pom.xml
@@ -3,7 +3,7 @@
   <parent>
      <artifactId>zauber-commons-parent</artifactId>
      <groupId>ar.com.zauber.commons</groupId>
-     <version>3.46</version>
+     <version>3.47-SNAPSHOT</version>
   </parent>
   <groupId>ar.com.zauber.commons</groupId>
   <artifactId>commons-xmpp</artifactId>
